# observability-poc

./: .dockerignore  .gitignore  .gitlab-ci.yml  README.md
backend/: Dockerfile  README.md  logging_config.yaml  main.py  pyproject.toml
backend/app/: entry.py
backend/app/api/: beats.py  ping.py
backend/app/dataaccess/: beats.py  db.py
backend/app/service/: beats.py
docs/plantuml/: log-architecture.puml  metric-architecture.puml  trace-architecture.puml
frontend/: Dockerfile  package.json  vite.config.js
frontend/resources/: nginx.conf
frontend/src/: main.js  metrics.js  traces.js
frontend/src/components/: CallApiButton.vue  HelloWorld.vue
frontend/src/services/: apiService.js
frontend/src/views/: HomeView.vue
scripts/: .gitignore  docker-compose.yml
scripts/grafana/: ldap.toml
scripts/grafana-loki/: loki-config.yml
scripts/grafana-tempo/: tempo-config.yml
scripts/grafana/provisioning/dashboards/: dashboards.yaml
scripts/grafana/provisioning/dashboards/json/: FastAPI Observability-1773291731026.json
scripts/grafana/provisioning/datasources/: datasources.yaml
scripts/mariadb/: init.sql
scripts/otel-collector/: otel-collector-config.yaml
scripts/prometheus/: prometheus-config.yml
